rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__operator_assignment.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (operator_assignment),\n\"\n    a += 1;\n    a -= 1;\n    a /= 1;\n    a *= 1;\n    a %= 1;\n    a >>= 1;\n    a <<= 1;\n    a >>>= 1;\n    \").into_iter().map(|\nstmt | stmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
a += 1
a -= 1
a /= 1
a *= 1
a %= 1
a >>= 1
a <<= 1
a >>>= 1
